aligning titles .fix for bbc/microbit-extras#2076

--- a/www/editor.css
+++ b/www/editor.css
@@ -3605,9 +3605,9 @@ div.sdTabTileLabel {
 }
 
 .sdInlineHd {
-  right: 0.4em;
-  top: -0.5em;
-  font-size: 1.8em;
+  left: 0em;
+  top: -0.7em;
+  font-size: 1.4em;
 }
 
 /*
